src/objects/ADvendio__ProgrammaticAccount__c.object
<CustomObject>
    <description>Store a relation between Accounts and Programmatic Advertising Data,  to link relevant Accounts to there programmatic Transactions.</description>
    <fields>
        <fullName>ADvendio__AccountName__c</fullName>
        <description>Which Account name is delivered by the scheduled import job from the SSP.</description>
        <inlineHelpText>Which Account name is delivered by the scheduled import job from the SSP.</inlineHelpText>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AccountType__c</fullName>
        <description>In which role is this account relevant for this Transaction.</description>
        <inlineHelpText>In which role is this account relevant for this Transaction.</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertiser</fullName>
                </value>
                <value>
                    <fullName>Agency / Buyer</fullName>
                </value>
                <value>
                    <fullName>Demand Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account to match Programmatic Advertising Transactions with Accounts.</description>
        <inlineHelpText>Lookup to Account to match Programmatic Advertising Transactions with Accounts.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programmatic Accounts</relationshipLabel>
        <relationshipName>ProgrammaticAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerLogin__c</fullName>
        <description>Link to SSP Login, is filled by scheduled import job.</description>
        <inlineHelpText>Link to SSP Login, is filled by scheduled import job.</inlineHelpText>
        <label>AdServer Login</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>Programmatic Accounts</relationshipLabel>
        <relationshipName>ProgrammaticAccounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <description>Description for additional information.</description>
        <inlineHelpText>Description for additional information.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExternalID__c</fullName>
        <description>External ID for this Account ad for this transaction. Automatically filled by scheduled import job if available by SSP.</description>
        <inlineHelpText>External ID for this Account ad for this transaction. Automatically filled by scheduled import job if available by SSP.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Programmatic Data import job writes a generated unique identifier to this field.</description>
        <externalId>true</externalId>
        <inlineHelpText>Programmatic Data import job writes a generated unique identifier to this field.</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Programmatic Account</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Account__c</columns>
        <columns>ADvendio__AdServerLogin__c</columns>
        <columns>ADvendio__AccountName__c</columns>
        <columns>ADvendio__AccountType__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PAA-{0000}</displayFormat>
        <label>Programmatic Account-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programmatic Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>